# MSztanderaKolanek

./: CMakeLists.txt
Project/Include/: List.hpp
Project/Source/: List.cpp
Project/Test/: ListTest.cpp
